--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
 
 <style>
     table, th, td {
-        border: 1px solid black;
+        border: 5px solid rgb(43, 168, 209);
+        border-collapse: collapse;
+    }
+
+    th {
+      background-color: aquamarine;
+      padding: 15px;
     }
 </style>
 
 <body>
-    <table>
+    <table style="width: 70%;">
         <tr>
           <th>Company</th>
           <th>Contact</th>
@@ -22,12 +28,12 @@
         <tr>
           <td>Alfreds Futterkiste</td>
           <td>Maria Anders</td>
-          <td>Germany</td>
+          <td style="background-color: darkorange;">Germany</td>
         </tr>
         <tr>
           <td>Centro comercial Moctezuma</td>
           <td>Francisco Chang</td>
-          <td>Mexico</td>
+          <td style="background-color: darkgreen;">Mexico</td>
         </tr>
       </table>
       
